--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
+dependency_overrides:
+  collection: ^1.14.12
+
 dependencies:
   flutter:
     sdk: flutter
@@ -28,6 +31,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  shared_preferences: ^0.5.7+2
+  path_provider: ^1.6.8
 
 dev_dependencies:
   flutter_test:
